<resources>
    <string name="app_name">Prerana</string>
    <string name="prerana_youth_festival">Prerana Youth Festival</string>
    <string name="be_there_for_prerana_festival">Be there for the next Prerana Festival</string>

    <string name="hare_krishna">Hare Krishna Hare Krishna , Krishna Krishna Hare Hare, Hare Ram Hare Ram Ram Ram Hare Hare</string>
    <string name="youtube_link">  https://www.youtube.com/playlist?list=PLpGI4YxmdseFZ0ujJo_WN1SHqcxBxYioK</string>
    <string name="youtube_link_title">To hear Prerana festival lectures, do visit</string>
    <string name="venue">Sri Sri Radha Gopinath Mandir , 7 K.M.Munshi Marg, Girgaon Chowpatty, Mumbai</string>
    <string name="contact">rgprerana@gmail.com</string>
    <string name="facebook">facebook link : fb.me/iysmumbai</string>
    <string name="warning">For unmarried boys in the age group of 15 - 30</string>
    <string name="title">Prerana Youth Festival</string>
    <string name="preranaUtubeLink">defaultLink</string>

</resources>
