<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/rootLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="iskcon.preranafestival.MainActivity"
    >


    <include
        layout="@layout/include_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/imageViewPreranaBanner"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/iskcon_bg"
                    tools:visibility="gone"
                    />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvMorque"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#80000000"
                    android:ellipsize="marquee"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:text="@string/hare_krishna"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:visibility="gone"
                    />
            </RelativeLayout>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/be_there_for_prerana_festival"
                android:textColor="#ff0000"
                android:textSize="18sp"
                android:textStyle="bold"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@drawable/boarder"
                android:orientation="vertical"
                android:padding="5dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/appCompatTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Date       :  "
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end|center_vertical"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="22th July 2017"
                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    >

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Topic      :  "
                        android:textSize="20sp"
                        android:textStyle="bold"
                        />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvTopic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end|center_vertical"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="The Joy Of Love"
                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    >

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Speaker :"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvSpeakerName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="   Prabhuji..."
                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    >

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Venue    : "
                        android:textSize="20sp"
                        android:textStyle="bold"
                        />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvVenue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/venue"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    >

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Contact  : "
                        android:textSize="20sp"
                        android:textStyle="bold"
                        />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvContact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="end|center_vertical"
                        android:text="@string/contact"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:autoLink="email"
                        />

                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/jj"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="5dp"
                        android:text="@string/youtube_link_title"
                        />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvYoutubeLink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ff0000"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="Click here to see Prerana Youth  Festivals Videos"
                        android:gravity="center"
                        android:layout_marginRight="100dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"/>

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fabShare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="right|end|center_vertical"
                        android:layout_margin="10dp"
                        android:src="@android:drawable/ic_menu_share"
                        />

                </RelativeLayout>
            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvWarning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/warning"
                android:textColor="#ff0000"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:gravity="center"
                android:text="For More Info Please Visit , www.iysmumbai.com"
                android:textSize="16sp"
                android:textStyle="bold"
                />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
